fix X11 defaults, move hexdump to defaults, add LANG='' to default schroot

--- a/install
+++ b/install
@@ -30,14 +30,14 @@ sub main {
 		
 		`defaults write com.apple.Terminal FocusFollowsMouse -string YES`;
 		
-		`defaults write sync_clipboard_to_pasteboard true`;
-    `defaults sync_pasteboard true`;
-    `defaults sync_pasteboard_to_clipboard true`;
-    `defaults sync_pasteboard_to_primary true`;
-    `defaults sync_primary_on_select true`;
-    `defaults wm_click_through true`;
-    `defaults wm_ffm true`;
-    `defaults wm_focus_on_new_window true`;
+		`defaults write org.x.X11 sync_clipboard_to_pasteboard true`;
+    `defaults write org.x.X11 sync_pasteboard true`;
+    `defaults write org.x.X11 sync_pasteboard_to_clipboard true`;
+    `defaults write org.x.X11 sync_pasteboard_to_primary true`;
+    `defaults write org.x.X11 sync_primary_on_select true`;
+    `defaults write org.x.X11 wm_click_through true`;
+    `defaults write org.x.X11 wm_ffm true`;
+    `defaults write org.x.X11 wm_focus_on_new_window true`;
     
 	}
 
